--- a/ORCA/src/components/Dashboard.css
+++ b/ORCA/src/components/Dashboard.css
@@ -8,7 +8,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: flex-start;
+    justify-content: left;
     margin: 0;
     padding: 0;
     background: black;
@@ -17,6 +17,9 @@ body{
 #root{
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
 }
 
 .container{
@@ -33,7 +36,7 @@ body{
 }
 
 .dash{
-    margin: 0 0 0 10em;
+    margin: 0 0 0 0em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -45,7 +48,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 0 0 4em;
+    padding: 0 0 0 0em;
     width: 100%;
 }
 
@@ -108,3 +111,31 @@ h1{
 Link div p{
     color: white;
 }
+
+/* Dashboard.css */
+
+.office-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    position: relative;
+}
+
+.office-item div {
+    flex-grow: 1;
+}
+
+.office-item .delete-button {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
