--- a/ORCA/src/components/SeatArray.css
+++ b/ORCA/src/components/SeatArray.css
@@ -3,7 +3,10 @@
     overflow-y: scroll;
     
 }
-
+::-webkit-scrollbar {
+        display: none;
+    }
+    
 .array, .extra{
     display: flex;
 }
