--- a/ORCA/src/components/SeatInfo.css
+++ b/ORCA/src/components/SeatInfo.css
@@ -1,3 +1,7 @@
+.info{
+    margin-top: 1em;
+}
+
 .formal{
     display: flex;
     flex-direction: column;
@@ -7,9 +11,31 @@
     max-width: 80%;
 }
 
+.seat-id{
+    display: flex;
+    align-items: start;
+    justify-content: left;
+}
+
+.seat-id label{
+   width: 35%;
+}
+
+.formal label{
+    font-size: 1.5rem;
+}
+
 .formal input{
     font-size: 1.2rem;
     width: 100%;
+    background: none;
+    border: none;
+    border-bottom: 3.5px solid white;
+    color: white;
+    font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;
+    padding: .2em 0 0 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .formal button{
